--- a/.github/workflows/Deploy_dev.yml
+++ b/.github/workflows/Deploy_dev.yml
@@ -266,7 +266,8 @@ jobs:
         uses: docker://ghcr.io/ycit-team-terraformers/terraformers:v1
         env:
            TF_CLI_CONFIG_FILE: ./run-modules/create-gke/.terraformrc
-           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+           # GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+           GOOGLE_CREDENTIALS: ${{ secrets.G_INFO }} 
         with:
           entrypoint: terraform
           args: -chdir=./run-modules/create-gke/ apply -auto-approve
@@ -295,7 +296,8 @@ jobs:
         uses: docker://ghcr.io/ycit-team-terraformers/terraformers:v1
         env:
            TF_CLI_CONFIG_FILE: ./run-modules/create-gke/.terraformrc
-           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+           # GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+           GOOGLE_CREDENTIALS: ${{ secrets.G_INFO }} 
         with:
           entrypoint: terraform
           args: -chdir=./run-modules/create-gke/ apply -auto-approve
