--- a/.github/workflows/Destroy_dev.yml
+++ b/.github/workflows/Destroy_dev.yml
@@ -143,7 +143,7 @@ jobs:
         uses: docker://ghcr.io/ycit-team-terraformers/terraformers:v1
         env:
            TF_CLI_CONFIG_FILE: ./run-modules/create-gke/.terraformrc
-           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+           GOOGLE_CREDENTIALS: ${{ secrets.G_INFO }} 
         with:
           entrypoint: terraform
           args: -chdir=./run-modules/create-gke/ destroy -auto-approve
